test/langtools/tools/javac/patterns/UncheckedWarningOnMatchesTest.out
UncheckedWarningOnMatchesTest.java:14:13: compiler.warn.prob.found.req: (compiler.misc.unchecked.cast.to.type), java.lang.Object, java.util.ArrayList<java.lang.Integer>
- compiler.err.warnings.and.werror
1 error
1 warning
